--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.0",
-    "express-handlebars": "^5.1.0",
+    "express-handlebars": "^5.3.5",
     "express-session": "^1.17.1",
     "handlebars-helpers": "^0.9.8",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "razorpay": "^2.0.6",
     "template-helpers": "^1.0.1",
     "twilio": "^3.80.1"
+  },
+  "devDependencies": {
+    "@types/express-handlebars": "^6.0.0"
   }
 }
