--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars-helpers": "^0.9.8",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
     "node-fetch": "^3.2.10",
